[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/UI/health_bar_background.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/health_bar_progress.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/health_bar_border.png" type="Texture" id=3]
[ext_resource path="res://HealthContainer.gd" type="Script" id=4]

[node name="HealthContainer" type="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 400.0
margin_bottom = 40.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBarUnder" type="TextureProgress" parent="."]
margin_right = 380.0
margin_bottom = 20.0
value = 100.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 2 )
tint_progress = Color( 0.701961, 0.101961, 0.184314, 1 )
nine_patch_stretch = true
stretch_margin_left = 2
stretch_margin_top = 2
stretch_margin_right = 2
stretch_margin_bottom = 2

[node name="HealthBarOver" type="TextureProgress" parent="."]
margin_right = 380.0
margin_bottom = 20.0
value = 100.0
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 2 )
tint_progress = Color( 0.254902, 0.87451, 0.145098, 1 )
nine_patch_stretch = true
stretch_margin_left = 2
stretch_margin_top = 2
stretch_margin_right = 2
stretch_margin_bottom = 2

[node name="UpdateTween" type="Tween" parent="."]

[node name="PulseTween" type="Tween" parent="."]
repeat = true
playback/repeat = true
